<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aroundMeMenu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nav_hospital"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/hospital"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nav_dentist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/dentist"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nav_attraction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/attraction"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <Button
            android:id="@+id/nav_kosher_restaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/kosher"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nav_habad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/habad"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
             />

    </LinearLayout>
</LinearLayout>