<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".insuranceMenu"
    android:background="@drawable/backgroumdimage">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="horizontal">-->

    <!--<Button-->
    <!--android:id="@+id/btnSendFile"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/sendFile"-->
    <!--android:textSize="36sp" />-->

    <!--<Button-->
    <!--android:id="@+id/btnIncrease"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/increaseInsurance"-->
    <!--android:textSize="36sp" />-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/passportCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/passportCard"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/afenix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/afenix"
            android:textColor="@color/white"
            android:textSize="35sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Arhel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/Arhel"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <Button
            android:id="@+id/Migdal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/Migdal"
            android:textColor="@color/white"
            android:textSize="35sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menora"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:text="@string/menora"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <Button
            android:id="@+id/insuranceMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/border"
            android:textColor="@color/white"
            android:textSize="35sp" />


    </LinearLayout>
</LinearLayout>